--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "vim/bundle/taglist"]
 	path = vim/bundle/taglist
 	url = https://github.com/vim-scripts/taglist.vim
+[submodule "vim/bundle/syntax-jade"]
+	path = vim/bundle/syntax-jade
+	url = https://github.com/digitaltoad/vim-jade.git
+[submodule "vim/bundle/syntax-markdown"]
+	path = vim/bundle/syntax-markdown
+	url = https://github.com/tpope/vim-markdown.git
