Add improved javascript support

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "zsh/oh-my-zsh"]
 	path = zsh/oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
+[submodule "vim/bundle/syntax-javascript"]
+	path = vim/bundle/syntax-javascript
+	url = https://github.com/pangloss/vim-javascript.git
