--- a/.gitmodules
+++ b/.gitmodules
@@ -51,4 +51,4 @@
 	url = git://github.com/avakarev/vim-rusa.git
 [submodule "vim/bundle/matchit"]
 	path = vim/bundle/matchit
-	url = https://github.com/vim-scripts/matchit.zip.git
+	url = git://github.com/vim-scripts/matchit.zip.git
