Add support for perl and tt2

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/bundle/matchit"]
 	path = vim/bundle/matchit
 	url = git://github.com/vim-scripts/matchit.zip.git
+[submodule "vim/bundle/syntax-perl"]
+	path = vim/bundle/syntax-perl
+	url = git://github.com/petdance/vim-perl.git
