--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vim/bundle/fugitive"]
 	path = vim/bundle/fugitive
-	url = git://github.com/tpope/vim-fugitive
+	url = git://github.com/tpope/vim-fugitive.git
 [submodule "vim/bundle/jslint"]
 	path = vim/bundle/jslint
 	url = git://github.com/hallettj/jslint.vim.git
@@ -15,7 +15,7 @@
 	url = git://github.com/tpope/vim-pathogen.git
 [submodule "vim/bundle/snipmate"]
 	path = vim/bundle/snipmate
-	url = git://github.com/msanders/snipmate.vim
+	url = git://github.com/msanders/snipmate.vim.git
 [submodule "vim/bundle/supertab"]
 	path = vim/bundle/supertab
 	url = git://github.com/ervandew/supertab.git
@@ -33,7 +33,7 @@
 	url = git://github.com/tpope/vim-markdown.git
 [submodule "vim/bundle/taglist"]
 	path = vim/bundle/taglist
-	url = git://github.com/vim-scripts/taglist.vim
+	url = git://github.com/vim-scripts/taglist.vim.git
 [submodule "zsh/oh-my-zsh"]
 	path = zsh/oh-my-zsh
 	url = git://github.com/robbyrussell/oh-my-zsh.git
