--- a/.gitmodules
+++ b/.gitmodules
@@ -69,4 +69,7 @@
 	url = git://github.com/wavded/vim-stylus.git
 [submodule "vim/bundle/syntax-html5"]
 	path = vim/bundle/syntax-html5
-	url = https://github.com/othree/html5.vim
+	url = git://github.com/othree/html5.vim.git
+[submodule "vim/bundle/syntax-nginx"]
+	path = vim/bundle/syntax-nginx
+	url = git://github.com/vim-scripts/nginx.vim.git
