Add utitity to check jsfiles syntax

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zsh/oh-my-zsh"]
 	path = zsh/oh-my-zsh
 	url = git://github.com/robbyrussell/oh-my-zsh.git
+[submodule "bash/scripts/deps/jshint"]
+	path = bash/scripts/deps/jshint
+	url = git://github.com/jshint/jshint.git
