--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "zsh/oh-my-zsh"]
-	path = zsh/oh-my-zsh
-	url = git://github.com/robbyrussell/oh-my-zsh.git
 [submodule "zsh/completions"]
 	path = zsh/completions
 	url = git://github.com/zsh-users/zsh-completions.git
+[submodule "zsh/ohmyzsh"]
+	path = zsh/ohmyzsh
+	url = git://github.com/ohmyzsh/ohmyzsh.git
